--- a/make.conf
+++ b/make.conf
@@ -1,4 +1,5 @@
 USE="${USE} -tpm tpm2 tpm2_simulator tpm2_simulator_manufacturer vtpm_proxy"
-CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/project-rpi5/kconfig/kernel-6_1-r114-r1-4k"
+USE="${USE} arc_disable_cros_video_decoder"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/project-rpi5/kconfig/kernel-6_1-r114-4k-smallkernel"
 TTY_CONSOLE="ttyAMA10"
 
