--- a/make.conf
+++ b/make.conf
@@ -1,1 +1,3 @@
 CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/project-rpi5/kconfig/kernel-6_1-r120-def-r1"
+
+USE="${USE} -disable_explicit_dma_fences"
