blocking tty::chromiumos

--- a/make.conf
+++ b/make.conf
@@ -1,3 +1,5 @@
 CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/project-rpi5/kconfig/kernel-6_1-r126-def-r1"
 
 USE="${USE} disable_explicit_dma_fences -arc_disable_cros_video_decoder -disable_background_blur -disable_cros_video_decoder"
+
+#TTY_CONSOLE="ttyAMA10"
